--- a/index.html
+++ b/index.html
@@ -1,54 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to My GitHub Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      background: #f4f4f4;
-    }
-    header {
-      background: #333;
-      color: white;
-      padding: 2rem;
-    }
-    main {
-      padding: 2rem;
-    }
-    footer {
-      background: #222;
-      color: white;
-      padding: 1rem;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-    }
-    a {
-      color: #61dafb;
-    }
-  </style>
+<title>Page Title</title>
 </head>
 <body>
 
-  <header>
-    <h1>Welcome to My GitHub Pages Site!</h1>
-    <p>Hosted on GitHub.io</p>
-  </header>
-
-  <main>
-    <p>This is the landing page for <strong>yourusername.github.io</strong>.</p>
-    <p>You can customize this page however you like.</p>
-    <p>Check out my projects on <a href="https://github.com/yourusername" target="_blank">GitHub</a>.</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Your Name</p>
-  </footer>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
 </body>
 </html>
