--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scientist Portfolio</title>
+  <title>Projects | Scientist Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -17,18 +17,13 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>Hello, I'm Harshit Mishra </h1>
-    <img src="assets/img/profile.png" alt="Profile Photo" class="profile-photo">
-    <p>Scientist | Researcher | Explorer</p>
-    <a href="knowledge.html" class="button">Explore Knowledge Base</a>
+  <section class="projects-hero">
+    <h1>Projects</h1>
+    <p>Explore my current research, collaborations, and experiments.</p>
   </section>
 
-  <section class="latest-posts">
-    <h2>Latest Blog Posts</h2>
-    <div id="posts-container">
-      <!-- Blog posts will load here dynamically -->
-    </div>
+  <section class="projects-container" id="projects-list">
+    <!-- Project cards will load here dynamically -->
   </section>
 
   <footer>
