--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
   </header>
 
   <section class="hero">
-    <h1>Hello, I'm Harshit Mishra </h1>
+    <div class="hero-text">
+      <h1 class="typewriter">Hello, I am Dr. Your Name</h1>
+      <p class="fade-slide subtitle">Computational Physicist & Open Science Advocate</p>
+    </div>
     <img src="assets/img/profile.png" alt="Profile Photo" class="profile-photo">
-    <p>Scientist | Researcher | Explorer</p>
-    <a href="knowledge.html" class="button">Explore Knowledge Base</a>
+    <p>Welcome to my digital lab: research, writing, and open science.</p>
   </section>
+  
 
   <section class="latest-posts">
     <h2>Latest Blog Posts</h2>
