--- a/knowledge.html
+++ b/knowledge.html
@@ -25,10 +25,7 @@
   <section class="knowledge-content">
     <div class="sidebar">
       <ul>
-        <li><a href="#topic1">Quantum Research</a></li>
-        <li><a href="#topic2">Marine Biology Notes</a></li>
-        <li><a href="#topic3">Technical Tutorials</a></li>
-        <li><a href="#topic4">Random Insights</a></li>
+        <li><a href="knowledge/quant/index.html">Quantum Research</a></li>
       </ul>
     </div>
 
@@ -38,20 +35,7 @@
         <p>Notes on particle behaviors, experimental setups, and theoretical models.</p>
       </section>
 
-      <section id="topic2">
-        <h2>Marine Biology Notes</h2>
-        <p>Field observations and lab experiments on deep-sea ecosystems.</p>
-      </section>
-
-      <section id="topic3">
-        <h2>Technical Tutorials</h2>
-        <p>How-to guides: using Python for simulations, lab equipment calibration, etc.</p>
-      </section>
-
-      <section id="topic4">
-        <h2>Random Insights</h2>
-        <p>Personal reflections, big ideas, and small curiosities collected over time.</p>
-      </section>
+      
     </div>
   </section>
 
