--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
   <section class="hero">
     <div class="hero-text">
-      <h1 class="typewriter">Hello, I am Dr. Your Name</h1>
-      <p class="fade-slide subtitle">Computational Physicist & Open Science Advocate</p>
+      <h1 class="typewriter">Hello, I'm Harshit Mishra</h1>
+      <p class="fade-slide subtitle">Computational Physicist</p>
     </div>
     <img src="assets/img/profile.png" alt="Profile Photo" class="profile-photo">
-    <p>Welcome to my digital lab: research, writing, and open science.</p>
+    <p>research, writing, and open source</p>
   </section>
   
 
