--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scientist Portfolio</title>
+  <title>Blog | Scientist Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -17,21 +17,13 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1 class="typewriter">Hello, I'm Harshit Mishra</h1>
-      <p class="fade-slide subtitle">Computational Physicist</p>
-    </div>
-    <img src="assets/img/profile.png" alt="Profile Photo" class="profile-photo">
-    <p>research, writing, and open source</p>
+  <section class="blog-hero">
+    <h1>Blog</h1>
+    <p>Sharing research updates, reflections, and field notes.</p>
   </section>
-  
 
-  <section class="latest-posts">
-    <h2>Latest Blog Posts</h2>
-    <div id="posts-container">
-      <!-- Blog posts will load here dynamically -->
-    </div>
+  <section class="blog-container" id="blog-posts">
+    <!-- Blog cards will load here dynamically -->
   </section>
 
   <footer>
