--- a/knowledge.html
+++ b/knowledge.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scientist Portfolio</title>
+  <title>Knowledge Base | Scientist Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -17,20 +17,25 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1 class="typewriter">Hello, I'm Harshit Mishra</h1>
-      <p class="fade-slide subtitle">Computational Physicist</p>
-    </div>
-    <img src="assets/img/profile.png" alt="Profile Photo" class="profile-photo">
-    <p>research, writing, and open source</p>
+  <section class="knowledge-hero">
+    <h1>Knowledge Base</h1>
+    <p>Explore my research notes, tutorials, and technical knowledge.</p>
   </section>
-  
 
-  <section class="latest-posts">
-    <h2>Latest Blog Posts</h2>
-    <div id="posts-container">
-      <!-- Blog posts will load here dynamically -->
+  <section class="knowledge-content">
+    <div class="sidebar">
+      <ul>
+        <li><a href="knowledge/quant/index.html">Quantum Research</a></li>
+      </ul>
+    </div>
+
+    <div class="main-content">
+      <section id="topic1">
+        <h2>Quantum Research</h2>
+        <p>Notes on particle behaviors, experimental setups, and theoretical models.</p>
+      </section>
+
+      
     </div>
   </section>
 
