--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,11 @@
 <body>
   <header>
     <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="knowledge.html">Knowledge Base</a>
-      <a href="blog.html">Blog</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
+      <a href="index.html">⾕</a>
+      <a href="knowledge.html">⎚-⎚</a>
+      <a href="blog.html">🕮</a>
+      <a href="projects.html">🖳</a>
+      <a href="contact.html">☏</a>
     </nav>
   </header>
 
