--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scientist Portfolio</title>
+  <title>opaquebug</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -19,11 +20,17 @@
 
   <section class="hero">
     <div class="hero-text">
-      <h1 class="typewriter">Hello, I'm Harshit Mishra</h1>
-      <p class="fade-slide subtitle">Computational Physicist</p>
+      <h1 class="typewriter" style="font-family: 'Rock Salt'; font-size: 44px;">
+        Hello, I'm Harshit Mishra
+      </h1>
+
+      <p class="fade-slide subtitle">
+        𝚛𝚎𝚜𝚎𝚊𝚛𝚌𝚑, 𝚠𝚛𝚒𝚝𝚒𝚗𝚐, 𝚊𝚗𝚍 𝚘𝚙𝚎𝚗 𝚜𝚘𝚞𝚛𝚌𝚎
+      </p>
     </div>
     <img src="assets/img/profile.png" alt="Profile Photo" class="profile-photo">
-    <p>research, writing, and open source</p>
+    <p>Ordinary multicellular biological organism from the species homo sapiens.</p>
+
   </section>
   
 
